[gd_scene load_steps=17 format=3 uid="uid://cc7uo8q0ekdp0"]

[ext_resource type="Texture2D" uid="uid://lxhxmiglonpr" path="res://assets/Player_Placeholder.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bqd11pvcc7qkk" path="res://scenes/entities/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://dgyhdcrmkx7nn" path="res://scenes/components/movement/gravity_component.tscn" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://cvvqyfpy4vljy" path="res://scenes/components/controlers/input_component.tscn" id="4_dqkch"]
[ext_resource type="PackedScene" uid="uid://d01yesj4e04jf" path="res://scenes/components/movement/movement_component.tscn" id="5_qlg0r"]
[ext_resource type="PackedScene" uid="uid://dhasqn4jim5yj" path="res://scenes/components/movement/animation_component.tscn" id="6_tuyoq"]
[ext_resource type="PackedScene" uid="uid://cyptpny7snkgl" path="res://scenes/components/movement/wall_jump_component.tscn" id="8_dnykm"]
[ext_resource type="PackedScene" uid="uid://qhs724y35i78" path="res://scenes/components/movement/advanced_jump_component.tscn" id="8_smehm"]
[ext_resource type="PackedScene" uid="uid://dtkqkm7e0206w" path="res://scenes/components/health_component.tscn" id="9_c5rqy"]
[ext_resource type="PackedScene" uid="uid://dwgf5uyl662tw" path="res://scenes/components/UI/health_bar.tscn" id="10_b6tgf"]
[ext_resource type="PackedScene" uid="uid://c8pyultv2bmi0" path="res://scenes/components/damage_handling/hurt_box.tscn" id="11_73kkf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vyb7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2els"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyb7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyb7")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyb7")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 9.0
height = 52.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6tgf"]
size = Vector2(20, 54)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "jump_component", "wall_jump_component", "animation_component")]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_g2els")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("AdvancedJumpComponent")
wall_jump_component = NodePath("WallJumpComponent")
animation_component = NodePath("AnimationComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_g2els")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_g2els")

[node name="GravityComponent" parent="." instance=ExtResource("3_qhqgy")]

[node name="InputComponent" parent="." instance=ExtResource("4_dqkch")]

[node name="MovementComponent" parent="." instance=ExtResource("5_qlg0r")]
speed = 250.0

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_tuyoq")]
sprite = NodePath("../AnimatedSprite2D")

[node name="AdvancedJumpComponent" parent="." instance=ExtResource("8_smehm")]
jump_buffer = 0.16

[node name="WallJumpComponent" parent="." node_paths=PackedStringArray("raycast_left", "raycast_right") instance=ExtResource("8_dnykm")]
raycast_left = NodePath("../RayCastLeft")
raycast_right = NodePath("../RayCastRight")
wall_jump_pushback = 250.0

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -26)
target_position = Vector2(25, 0)
collision_mask = 4

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -26)
target_position = Vector2(-25, 0)
collision_mask = 4

[node name="HealthComponent" parent="." instance=ExtResource("9_c5rqy")]

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_b6tgf")]
value = 100.0
health_component = NodePath("../HealthComponent")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_73kkf")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -26)
shape = SubResource("RectangleShape2D_b6tgf")

[connection signal="health_changed" from="HealthComponent" to="HealthBar" method="_on_health_component_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="max_health_changed" from="HealthComponent" to="HealthBar" method="_on_health_component_max_health_changed"]
